--- a/TCT-AI/[TCT기출문제] 2020년-AI/[TCT기출문제] 2020년-AI_실기형/[TCT기출문제] 2020년-AI_솔루션/TCT_20200427_AI_정답.ipynb
+++ b/TCT-AI/[TCT기출문제] 2020년-AI/[TCT기출문제] 2020년-AI_실기형/[TCT기출문제] 2020년-AI_솔루션/TCT_20200427_AI_정답.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/kimyh7/AI/blob/master/TCT-AI/[TCT기출문제] 2020년-AI/[TCT기출문제] 2020년-AI_실기형/[TCT기출문제] 2020년-AI_솔루션/TCT_20200427_AI_정답.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -976,7 +984,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
